# EternalModManager

./: .gitattributes  .gitignore  Cargo.toml  EternalModManager.sln  README.md  build.rs  nuget.config  rustfmt.toml
.github/workflows/: build.yml  release.yml  test.yml
EternalModManager/: App.axaml  App.axaml.cs  EternalModManager.csproj  Program.cs  ViewLocator.cs  flatpak-dotnet-generator.py  my-output-sources.json
EternalModManager/Classes/: AssetsInfo.cs  ConfigFile.cs  EternalMod.cs  ModInfo.cs
EternalModManager/ViewModels/: AdvancedWindowViewModel.cs  MainWindowViewModel.cs  MessageBoxViewModel.cs  ViewModelBase.cs
EternalModManager/Views/: AdvancedWindow.axaml  AdvancedWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageBox.axaml  MessageBox.axaml.cs
appimage/: publish-appimage  publish-appimage.conf
resources/: com.powerball253.eternalmodmanager.appdata.xml  com.powerball253.eternalmodmanager.desktop  eternalmodmanager.appdata.xml  eternalmodmanager.desktop  io.github.brunoanc.eternalmodmanager.appdata.xml  io.github.brunoanc.eternalmodmanager.desktop
snap/: snapcraft.yaml
snap/gui/: eternalmodmanager.desktop
snap/resources/: com.powerball253.eternalmodmanager.appdata.xml  io.github.brunoanc.eternalmodmanager.appdata.xml
src/: main.rs  style.css
src/advanced_window/: advanced.ui  mod.rs
src/injector/: mod.rs
src/manager_window/: manager.ui  mod.rs
src/mod_data/: imp.rs  mod.rs
src/mod_list_row/: context_menu.ui  imp.rs  mod.rs  row.ui
src/model/: imp.rs  mod.rs
