[package]
name = "eternal_mod_manager"
description = "Cross platform mod manager for DOOM Eternal."
version = "4.2.0"
authors = ["Bruno Ancona <brunoanconasala@gmail.com>"]
license = "MIT"
repository = "https://github.com/brunoanc/EternalModManager"
homepage = "https://flathub.org/apps/com.powerball253.eternalmodmanager"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["gnome_46"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
notify-debouncer-mini = { version =  "0.4.1", default-features = false }
arboard = { version = "3.4.0", features = ["wayland-data-control"] }
windows = { version = "0.58.0", features = ["UI_ViewManagement"] }
notify = "6.1.1"
serde_json = "1.0.120"
im = "15.1.0"
open = "5.2.0"
walkdir = "2.5.0"
once_cell = "1.19.0"

[build-dependencies]
winresource = "0.1.15"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
